fix: place map below quay header on mobile

--- a/src/page-modules/departures/stop-place/stop-place.module.css
+++ b/src/page-modules/departures/stop-place/stop-place.module.css
@@ -1,8 +1,12 @@
 .stopPlaceContainer {
   display: grid;
   grid-template-columns: 2fr 3fr;
-  grid-auto-rows: auto minmax(37.5rem, auto) auto;
-  grid-template-areas: 'messages messages' 'quays map';
+  grid-template-rows: auto auto auto 1fr;
+  grid-template-areas:
+    'messages messages'
+    'header map'
+    'quays map'
+    '. map';
   gap: token('spacing.medium');
 }
 
@@ -12,9 +16,21 @@
 
 .mapContainer {
   grid-area: map;
-  max-height: 37.5rem;
+  height: 37.5rem;
   border-radius: token('border.radius.regular');
   overflow: hidden;
+}
+
+.quaysHeader {
+  grid-area: header;
+  display: flex;
+  gap: token('spacing.small');
+  flex-direction: row;
+  align-items: center;
+}
+
+.quaysHeader h2 {
+  flex: 1;
 }
 
 .quaysContainer {
@@ -25,17 +41,6 @@
 }
 .quaysContainer li {
   list-style: none;
-}
-
-.quaysHeader {
-  display: flex;
-  gap: token('spacing.small');
-  flex-direction: row;
-  align-items: center;
-}
-
-.quaysHeader h2 {
-  flex: 1;
 }
 
 .dateNavigation {
@@ -150,8 +155,11 @@
 
 @media only screen and (max-width: 650px) {
   .stopPlaceContainer {
-    grid-template-areas: 'map' 'messages' 'quays';
+    grid-template-areas: 'messages' 'header' 'map' 'quays';
     grid-template-columns: auto;
     grid-template-rows: auto;
+  }
+  .mapContainer {
+    height: auto;
   }
 }
